--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "server": "concurrently \"npx json-server --watch json/db.json\" \"npm run start\"",
     "start:mock": "concurrently \"json-server db.json\"  \"npm run start\""
   },
   "private": true,
